--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
 jobs:
   build:
-    runs-on: ubuntu-latest
     steps:
       - uses: krdlab/setup-haxe@v1
         with:
           haxe-version: 4.0.5
-      - run: |
+      - run:
           haxe -version
