--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,12 @@
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
       - uses: krdlab/setup-haxe@v1
         with:
