--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+name: CI
+
 on:
   push:
     branches: [ master ]
@@ -13,3 +15,5 @@ jobs:
           haxe-version: 4.0.5
       - run:
           haxe -version
+          cd sample
+          haxe build.hxml
