--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,6 @@ jobs:
           haxe-version: 4.0.5
       - run: |
           haxe -version
-          cd sample
+          ls -la
+          cd ./sample
           haxe build.hxml
