--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
           haxe-version: 4.0.5
       - run: |
           haxe -version
-          ls -la
+          haxelib install hxcpp
           cd ./sample
           haxe build.hxml
