--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
           haxe-version: 4.0.5
       - name: Publish
         env:
-          PACKAGE_NAME: ${{ haxe-poco }}
+          PACKAGE_NAME: haxe-poco
         run:
           - echo ${{ GITHUB_REF }}
           - mkdir ${{ PACKAGE_NAME }}
