--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,16 +17,16 @@ jobs:
       - name: Publish
         env:
           PACKAGE_NAME: haxe-poco
-        run:
-          - echo ${{ GITHUB_REF }}
-          - mkdir ${{ PACKAGE_NAME }}
+        run: |
+          echo ${{ GITHUB_REF }}
+          mkdir ${{ PACKAGE_NAME }}
 
-          - cp -r src ${{ PACKAGE_NAME }}
-          - cp README.md ${{ PACKAGE_NAME }}
-          - cp LICENCE ${{ PACKAGE_NAME }}
-          - cp haxelib.json ${{ PACKAGE_NAME }}
+          cp -r src ${{ PACKAGE_NAME }}
+          cp README.md ${{ PACKAGE_NAME }}
+          cp LICENCE ${{ PACKAGE_NAME }}
+          cp haxelib.json ${{ PACKAGE_NAME }}
 
-          - zip -r ${{ PACKAGE_NAME }}.zip ${{ PACKAGE_NAME }}
-          - unzip -l ${{ PACKAGE_NAME }}.zip
+          zip -r ${{ PACKAGE_NAME }}.zip ${{ PACKAGE_NAME }}
+          unzip -l ${{ PACKAGE_NAME }}.zip
 
-          - echo "TODO: publish to haxelib here"
+          echo "TODO: publish to haxelib here"
