--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           haxe-version: 4.0.5
       - run: |
-          echo ${{ env.GITHUB_REF }}
+          echo $GITHUB_REF
           haxe -version
           haxelib install hxcpp
           cd ./sample
