--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Create GitHub release
         uses: Roang-zero1/github-upload-release-artifacts-action@master
         with:
-          args:
-          - haxe-poco
+          args: |
+            haxe-poco
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
